// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bill-list-group GroupByCategoryType snapshot 1`] = `
<body>
  <div>
    <article
      class="ant-typography"
    >
      <h3
        class="ant-typography"
      >
        账单分类分组统计
      </h3>
      <div
        class="ant-typography"
      >
        <ul>
          <li>
            车贷
            ：
            0
            ￥
          </li>
          <li>
            车辆保养
            ：
            0
            ￥
          </li>
          <li>
            房贷
            ：
            5400
            ￥
          </li>
        </ul>
      </div>
    </article>
  </div>
</body>
`;

exports[`bill-list-group GroupByIncomeAndExpenditure snapshot 1`] = `
<body>
  <div>
    <article
      class="ant-typography"
    >
      <h3
        class="ant-typography"
      >
        收入支出分组统计
      </h3>
      <div
        class="ant-typography"
      >
        收入：
        0
         ￥
      </div>
      <div
        class="ant-typography"
      >
        支出：
        12700
         ￥
      </div>
    </article>
  </div>
</body>
`;
